Attempt to avoid overflow on iOS

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
   min-height: 100vh;
+  min-height: -webkit-fill-available;;
   display: flex;
   flex-direction: column;
   justify-content: center;
